--- a/src/assets/styles/_schema.scss
+++ b/src/assets/styles/_schema.scss
@@ -36,6 +36,16 @@
   display: none !important;
 }
 
+.hidden {
+  &-x {
+    overflow-x: hidden !important;
+  }
+
+  &-y {
+    overflow-y: hidden !important;
+  }
+}
+
 .align {
   &-center {
     align-items: center !important;
