--- a/src/app/components/Charts/CustomLegend/CustomLegend.scss
+++ b/src/app/components/Charts/CustomLegend/CustomLegend.scss
@@ -4,7 +4,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-left: 40px;
+      margin-left: 1rem;
 
       &-title {
         color: $light;
