--- a/src/app/components/Charts/CustomTinyLegend/CustomTinyLegend.scss
+++ b/src/app/components/Charts/CustomTinyLegend/CustomTinyLegend.scss
@@ -2,9 +2,23 @@
   &-tiny {
     &-legend {
       &_icon {
-        background: black;
-        width: 20px;
-        height: 20px;
+        position: relative;
+        display: inline-flex;
+        justify-content: center;
+        width: 100%;
+        height: 2rem;
+        margin-top: 0.75rem;
+
+        &-shape {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 1.25rem;
+          height: 1.25rem;
+          transform: translate(-50%, -50%);
+          filter: brightness(0) invert(1);
+          background-size: cover;
+        }
 
         &-plays {
           background: url('@img/play.svg') no-repeat center center;
@@ -15,11 +29,24 @@
         }
       }
 
-      &_schema {
-        z-index: -1;
+      &_overlay {
         position: absolute;
-        left: -65px;
+        z-index: -1;
+        top: 50%;
+        left: 50%;
+        width: 2.3rem;
+        height: 2.3rem;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        background: #000;
+        opacity: calc(1 / 8);
+      }
+
+      &_schema {
+        position: absolute;
+        z-index: -1;
         top: -45px;
+        left: -65px;
         width: 65px;
         height: 100px;
       }
@@ -27,19 +54,22 @@
       &_title {
         width: 100%;
         text-align: center;
+        font-family: $medium;
+        font-size: 0.6rem;
       }
 
       &_label {
-        text-align: center;
-        max-width: 65px;
-        width: inherit;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        text-transform: capitalize;
         position: absolute;
-        top: 50%;
+        top: 0.75rem;
+        overflow: hidden;
+        width: inherit;
+        max-width: 65px;
+
         // left: 15px;
-        transform: translateY(-50%);
+        // transform: translateY(-50%);
+        text-align: center;
+        text-transform: capitalize;
+        text-overflow: ellipsis;
       }
     }
   }
