feat(actions): added new triggers

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -36,6 +36,9 @@ $btn-purple: #602dd3;
 $btn-blue: #3f4af1;
 $btn-red: #ef263d;
 
+$like: #ef263d;
+$dislike: #3f4af1;
+
 $inp-field: #141b24;
 $inp-search: #1c2430;
 $inp-purple: #602dd3;
