--- a/src/app/components/Actions/Actions.scss
+++ b/src/app/components/Actions/Actions.scss
@@ -1,4 +1,16 @@
 .actions {
+  width: 100%;
+
+  &-stripe {
+    position: absolute;
+    display: block;
+    transform: translateY(3rem);
+    opacity: 0.25;
+    width: 100%;
+    height: 1px;
+    background-color: $dark;
+  }
+
   &-wrapper {
     position: relative;
     display: block;
@@ -10,5 +22,53 @@
     border-radius: 12px;
     background: $chart-schema;
     box-shadow: 0 0 1rem $chart-schema;
+  }
+
+  &-title {
+    font-family: $medium;
+    font-size: 14px;
+  }
+
+  &-label {
+    td {
+      position: relative;
+      padding-bottom: 1rem;
+      color: $dark;
+      font-weight: 600;
+      font-family: $medium;
+      font-size: 12px;
+    }
+  }
+
+  &-table {
+    width: 100%;
+    font-size: 12px;
+
+    &_body {
+      position: relative;
+      tr td {
+        padding: 1rem 0;
+      }
+    }
+
+    &_value {
+      margin-left: 0.25rem;
+      font-family: $medium;
+      font-size: 12px;
+    }
+
+    &_header {
+      position: relative;
+    }
+
+    &_title {
+      max-width: 10rem;
+      font-size: 12px;
+
+      span {
+        color: $dark;
+        font-size: 12px;
+      }
+    }
   }
 }
