--- a/src/app/components/Profile/Profile.scss
+++ b/src/app/components/Profile/Profile.scss
@@ -3,9 +3,8 @@
 
   &-wrapper {
     height: inherit;
-    border-top: 1em solid $bg-border;
-    border-right: 1em solid $bg-border;
-    border-bottom: 1em solid $bg-border;
+    padding-top: 1rem;
+    padding-right: 1rem;
     background: linear-gradient(to top, $profile-bottom, $profile-top);
 
     &_edit {
@@ -63,9 +62,9 @@
           top: 50%;
           left: 50%;
           width: 100%;
-          height: 6rem;
+          height: 5rem;
           transform: translate(-50%, -50%);
-          background: url('@img/avatar.png') no-repeat center center;
+          background: url('@img/user.svg') no-repeat center center;
           background-size: contain;
         }
 
