--- a/src/assets/styles/animations.css
+++ b/src/assets/styles/animations.css
@@ -1,5 +1,14 @@
 @import '../../../node_modules/animate.css/animate.min.css';
 
+:root {
+  --bp-lg: 1200px;
+  --bp-md: 992px;
+  --bp-sm: 768px;
+  --bp-xs: 576px;
+  --purple: #602dd3;
+  --red: #ef263d;
+}
+
 .appear {
   animation: appear 1.6s ease-in-out both;
 }
@@ -13,13 +22,14 @@
     opacity: 1;
   }
 }
+
 .dropdown-enter {
   opacity: 0;
 }
 
 .dropdown-enter-active {
-  opacity: 1;
   transition: opacity 200ms;
+  opacity: 1;
 }
 
 .dropdown-exit {
@@ -27,6 +37,65 @@
 }
 
 .dropdown-exit-active {
-  opacity: 0;
   transition: opacity 200ms;
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  box-shadow: 0 0 0.05rem var(--purple);
+  transition: all 1000ms ease-in-out;
+  width: 25%;
+  max-height: 10rem;
+  transform: translate(-50%, calc(-50% - 100%)) rotateX(-45deg) !important;
+  opacity: 0;
+}
+
+.ReactModal__Content--after-open {
+  transform: translate(-50%, -50%) rotateX(0deg) !important;
+  opacity: 1;
+}
+
+.ReactModal__Content--before-close {
+  transform: translate(-50%, calc(-50% - 100%)) rotateX(-45deg) !important;
+  opacity: 0;
+}
+
+.ReactModal__Overlay {
+  z-index: 99 !important;
+  transition: all 1000ms ease-in-out;
+  opacity: 0;
+  perspective: 800px;
+  perspective-origin: center center;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+@media screen and (max-width: 1200px) {
+  .ReactModal__Content--after-open {
+    width: 50%;
+    max-height: 10rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .ReactModal__Content--after-open {
+    width: 50%;
+    max-height: 10rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .ReactModal__Content--after-open {
+    width: 50%;
+    max-height: 10rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .ReactModal__Content--after-open {
+    width: 100%;
+    max-height: 10rem;
+  }
 }
